fix: 1px spacing on top when the header transitions from hidden to visible while scrolling

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,21 +4,20 @@
     cases in Safari, this extra height was added to make it a 
     little taller
   */
-  --extra-top-height: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--extra-top-height) 0.8rem 0 0.8rem;
-  height: calc(var(--header-height) + var(--extra-top-height));
+  padding: 0 0.8rem;
+  height: var(--header-height);
   position: fixed;
-  top: calc(var(--extra-top-height) * -1);
+  top: 0;
   right: 0;
   left: 0;
   z-index: 10;
   background-color: var(--header-background);
   color: var(--accent-color);
   transition: transform 0.2s ease-out;
-  box-sizing: border-box;
+  transform: translateY(0);
 }
 
 .title {
